populate card div with quiz questions and answers

--- a/codeQuiz.html
+++ b/codeQuiz.html
@@ -25,7 +25,7 @@
       <div class="card mt-1">
         <div class="card-header">
           <div class="card-body text-center">          
-          <h1 id="title-field"></h1>
+          <div id="title-field"></div>
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@
       <div class="card mt-1">
         <div class="card-header">
           <div class="card-body text-center">
-            <h2 id ="choices-field"></h2>              
+            <div id ="choices-field"></div>              
           </div>
         </div>
       </div>
