linked answer to correct choice

--- a/codeQuiz.html
+++ b/codeQuiz.html
@@ -41,7 +41,7 @@
       <div class="card mt-1">
         <div class="card-header">
           <div class="card-body text-center">
-            <h3 id="results-field"></h3>
+            <div id="results-field"></div>
           </div>
         </div>    
       </div>
