timer function added to js

--- a/codeQuiz.html
+++ b/codeQuiz.html
@@ -32,7 +32,7 @@
           <button class = "btn hide"> Answer4 </button>
 
         <div class = "utilites" id = "results-field"></div>
-          <div id = "timer"></div>
+          <div><span id = "time"></span></div>
            
       </div>
     </div>
